--- a/src/containers/page1/headPage1/head.css
+++ b/src/containers/page1/headPage1/head.css
@@ -7,38 +7,36 @@
 }
 
 .main__block{
-    width: 95vw;
+    width: 1000px;
+    height: 600px;
+    overflow: hidden;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: -60 auto 10px auto;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -60 ;
+    margin-bottom: 10px;
     position: relative;
 }
 
-
-
-.main__block *:nth-child(4){
-    margin-top: 150px;
+.main__block div{
+    display: flex;
 }
 
-.main__block *:nth-child(2) , .main__block *:nth-child(5){
-    margin-top: 110px;
-}
-
-.main__block *:nth-child(3) , .main__block *:nth-child(6){
-    margin-top: 70px;
-}
-
-.main__block *:nth-child(8),.main__block *:nth-child(14){
+.main__block div:nth-of-type(2){
     margin-top: -140px;
 }
 
-.main__block *:nth-child(9) , .main__block *:nth-child(12){
-    margin-top: -30px;
+.main__block div *:nth-child(4){
+    margin-top: 150px;
 }
 
-.main__block *:nth-child(10) , .main__block *:nth-child(13){
-    margin-top: -70px;
+.main__block div *:nth-child(2) , .main__block div *:nth-child(5){
+    margin-top: 110px;
 }
+
+.main__block div *:nth-child(3) , .main__block div *:nth-child(6){
+    margin-top: 70px;
+}
+
 
 
