--- a/src/containers/page1/EnlessColor/EndleseColor.css
+++ b/src/containers/page1/EnlessColor/EndleseColor.css
@@ -27,3 +27,30 @@
     margin: 0 auto;
     margin-bottom: 20px;
 }
+
+@media(max-width : 1000px){
+    .EndlessColor--blocks{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(5,1fr);
+        grid-gap: 10px;
+    }
+}
+
+@media(max-width : 450px){
+    .EndlessColor--blocks{
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(auto,1fr);
+        grid-gap: 10px;
+    }
+
+    .EndlessColor--header{
+        padding: 10px 0;
+    }
+    
+    .EndlessColor--detail{
+        font-size: 11px;
+        width:85%;
+        margin-bottom: 10px;
+    }
+}
