--- a/src/containers/page1/question/Question_item/QuestionItem.css
+++ b/src/containers/page1/question/Question_item/QuestionItem.css
@@ -30,3 +30,16 @@
     background-color: #ccc;
     border-radius: 5px;
 }
+
+@media(max-width : 460px){
+    .QuestionItem{
+        width: 300px;
+    }
+}
+
+@media(max-width : 350px){
+    .QuestionItem{
+        width: 95%;
+        margin: 0 auto;
+    }
+}
