--- a/src/components/blocks/circle/circle.css
+++ b/src/components/blocks/circle/circle.css
@@ -3,3 +3,10 @@
     height: 70px;
     border-radius: 50%;
 }
+
+@media(max-width : 850px){
+    .circle_color{
+        width: 50px;
+        height: 50px;
+    }   
+}
