--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .navbar{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,4 +29,26 @@
     width: 0.3em;
     height: 2em;
     background-color: rgb(0, 157, 255);
+}
+
+
+@media(max-width : 750px){
+    .navBtns{
+        display: none;
+    }
+
+    .navbar{
+        justify-content: space-between;
+    }
+}
+
+@media(max-width : 500px){
+
+    .navbar{
+        padding: 0.5em 0.5em;
+    }
+
+    .sign{
+        margin-right: 0;
+    }
 }
