--- a/src/containers/page1/aboutPallet/pallet/footerPallet/footerPallet.css
+++ b/src/containers/page1/aboutPallet/pallet/footerPallet/footerPallet.css
@@ -1,4 +1,4 @@
-.footer{
+.footer_pallet{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,3 +15,9 @@
     display: flex;
 }
 
+@media(max-width : 900px){
+    .footer_pallet{
+        padding: 10px;
+    }
+
+}
