--- a/src/containers/page1/headPage1/head.css
+++ b/src/containers/page1/headPage1/head.css
@@ -1,3 +1,11 @@
+
+.head{
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+    position: relative;
+}
+
 .page1__header{
     height: 22vh;
     display: flex;
@@ -8,14 +16,14 @@
 
 .main__block{
     width: 1000px;
-    height: 600px;
     overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: -60 ;
-    margin-bottom: 10px;
-    position: relative;
+    text-align: center;
+  /*   margin-top: -60 ;
+    margin-bottom: 10px; */
+    margin: -60px auto 10px auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .main__block div{
@@ -37,6 +45,3 @@
 .main__block div *:nth-child(3) , .main__block div *:nth-child(6){
     margin-top: 70px;
 }
-
-
-
