--- a/src/containers/page1/footer1/footerblocks/footerblock.css
+++ b/src/containers/page1/footer1/footerblocks/footerblock.css
@@ -10,4 +10,10 @@
     padding: 3px 0;
     color: #aaa;
     font-weight: 300;
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+.footerblock div:hover{
+    color: #555;
 }
