--- a/src/containers/page1/question/Question_item/QuestionItem.css
+++ b/src/containers/page1/question/Question_item/QuestionItem.css
@@ -3,10 +3,50 @@
     position: relative;
 }
 
+.questionItem__head{
+    width: fit-content;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.questionItem__detail{
+    height: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: height 0.3s ;
+    transition: opacity 0.3s 0.1s;
+}
+
+.showdetail{
+    height: fit-content;
+    display: block;
+    opacity: 1;
+    visibility: visible;
+}
+
+.qusrionItem__arrow{
+    font-size: 25px;
+    margin-left: 5px;
+    margin-top: -3px;
+    color: #ccc;
+    transition: all 0.2s;
+}
+
+.rotateArrow{
+    transform: rotate(90deg);
+}
+
 .QuestionItem h3{
     color: black;
     font-size: 15px;
     font-weight: 600;
+    transition: all 0.2s;
+}
+
+.QuestionItem h3:hover{
+    color:  rgb(0, 157, 255);
 }
 
 .QuestionItem p{
@@ -23,7 +63,7 @@
 
 .QuestionItem__line{
     position: absolute;
-    top: 12px;
+    top: 10px;
     left: -10px;
     width: 5px;
     height: 23px;
