--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,10 +1,36 @@
 .navbar{
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    background-color: #fff;
+}
+
+.navbar_main{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5em 1em;
     border-bottom: 1px solid #ccc;
+}
+
+.dropdown_nav{
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top :100%;
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+    padding: 25px 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.active_nav{
+    opacity: 1;
+    visibility: visible;
 }
 
 .navLogo{
@@ -37,14 +63,18 @@
         display: none;
     }
 
-    .navbar{
+    .dropdown_nav{
+        display: flex;
+    }
+
+    .navbar_main{
         justify-content: space-between;
     }
 }
 
 @media(max-width : 500px){
 
-    .navbar{
+    .navbar_main{
         padding: 0.5em 0.5em;
     }
 
